--- a/stacks/serverless/root.yml
+++ b/stacks/serverless/root.yml
@@ -194,8 +194,10 @@ Resources:
           Fn::ImportValue: !Sub ${InfrastructureStorageStackName}-InfrastructureApplicationCodeBucket
         CodeS3ObjectVersion: !Ref DovetailCdnArrangerCodeS3ObjectVersion
         EnvironmentType: !Ref EnvironmentType
-        ArrangementsDynamodbTable: !Sub /prx/${EnvironmentTypeAbbreviation}/dovetail-cdn-arranger/ARRANGEMENTS_DDB_TABLE
+        ArrangementsDynamodbAccessRole: !Sub /prx/${EnvironmentTypeAbbreviation}/dovetail-cdn-arranger/ARRANGEMENTS_DDB_ACCESS_ROLE
         ArrangementsDynamodbRegion: !Sub /prx/${EnvironmentTypeAbbreviation}/dovetail-cdn-arranger/ARRANGEMENTS_DDB_REGION
+        ArrangementsDynamodbTable: !Sub /prx/${EnvironmentTypeAbbreviation}/dovetail-cdn-arranger/ARRANGEMENTS_DDB_TABLE
+        ArrangementsDynamodbTTL: !Sub /prx/${EnvironmentTypeAbbreviation}/dovetail-cdn-arranger/ARRANGEMENTS_DDB_TTL
         DovetailHost: !Sub /prx/${EnvironmentTypeAbbreviation}/dovetail-cdn-arranger/DOVETAIL_HOST
         DovetailToken: !Sub /prx/${EnvironmentTypeAbbreviation}/dovetail-cdn-arranger/DOVETAIL_TOKEN
       Tags:
