More actions for copying objects

--- a/stacks/serverless/dovetail-cdn-arranger.yml
+++ b/stacks/serverless/dovetail-cdn-arranger.yml
@@ -95,7 +95,10 @@ Resources:
               - Effect: Allow
                 Action:
                   - s3:GetObject
+                  - s3:GetObjectAcl
+                  - s3:GetObjectTagging
                   - s3:PutObject
+                  - s3:PutObjectAcl
                   - s3:PutObjectTagging
                 Resource:
                   - !Sub ${DtCdnArrangerWorkspaceBucket.Arn}/*
