Add parameter descriptions

--- a/notifications/slack/template.yml
+++ b/notifications/slack/template.yml
@@ -10,8 +10,16 @@ Parameters:
     Type: String
   AwsOrganizationCrossAccountSharingRoleArn:
     Type: String
+    Description: >-
+      A role that exists in the AWS Organization management account, and has
+      permissions for actions such as organizations:ListAccounts and other
+      actions that can only exist in the management account.
   DevOpsCrossAccountAccessRoleName:
     Type: String
+    Description: >-
+      The name of a role that exists in all member accounts of an AWS
+      Organization, which has permissions for various DevOps operations, such
+      as listing and executing pipelines.
 Resources:
   HttpApi:
     Type: AWS::Serverless::HttpApi
