Update branch name

--- a/devops/aws-management/cd/template.yml
+++ b/devops/aws-management/cd/template.yml
@@ -144,7 +144,7 @@ Resources:
               Configuration:
                 ConnectionArn: !Ref CodeStarConnectionArn
                 FullRepositoryId: PRX/Infrastructure
-                BranchName: feat/devops_prep
+                BranchName: master
                 OutputArtifactFormat: CODE_ZIP
               Namespace: infrastructure_repo
               OutputArtifacts:
