Fix linter warning

--- a/db/dynamodb-table.yml
+++ b/db/dynamodb-table.yml
@@ -209,8 +209,7 @@ Resources:
         - Key: "prx:cloudformation:stack-id"
           Value: !Ref AWS::StackId
       TimeToLiveSpecification:
-        AttributeName:
-          !If [HasExpirationField, !Ref "ExpirationField", !Ref "AWS::NoValue"]
+        AttributeName: !If [HasExpirationField, !Ref "ExpirationField", !Ref "AWS::NoValue"]
         Enabled: !If [HasExpirationField, true, false]
   CrossAccountAccessRole:
     Type: "AWS::IAM::Role"
