Add RoS feed CDN DNS records

--- a/dns/publicfeeds.net-hosted_zone.yml
+++ b/dns/publicfeeds.net-hosted_zone.yml
@@ -144,3 +144,11 @@ Resources:
         # Sleep With me
         - { Type: A, Name: !Sub "pf9632swmp.${Domain}", AliasTarget: { DNSName: "d2bikk8qhi4lca.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
         - { Type: AAAA, Name: !Sub "pf9632swmp.${Domain}", AliasTarget: { DNSName: "d2bikk8qhi4lca.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
+
+        # Religion of Sports
+        - { Type: A, Name: !Sub "pf8014crsh.${Domain}", AliasTarget: { DNSName: "d1t2i7pt140aep.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
+        - { Type: AAAA, Name: !Sub "pf8014crsh.${Domain}", AliasTarget: { DNSName: "d1t2i7pt140aep.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
+        - { Type: A, Name: !Sub "pf2526lins.${Domain}", AliasTarget: { DNSName: "d3akokrgns9p2a.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
+        - { Type: AAAA, Name: !Sub "pf2526lins.${Domain}", AliasTarget: { DNSName: "d3akokrgns9p2a.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
+        - { Type: A, Name: !Sub "pf9084pist.${Domain}", AliasTarget: { DNSName: "d382rs9ora7usw.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
+        - { Type: AAAA, Name: !Sub "pf9084pist.${Domain}", AliasTarget: { DNSName: "d382rs9ora7usw.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
