Fix assume policy for task role

--- a/stacks/feeder.prx.org.yml
+++ b/stacks/feeder.prx.org.yml
@@ -268,13 +268,14 @@ Resources:
     Type: AWS::IAM::Role
     Properties:
       AssumeRolePolicyDocument:
-        Version: "2012-10-17"
+        Version: '2012-10-17'
         Statement:
           - Action:
               - sts:AssumeRole
             Effect: Allow
             Principal:
-              AWS: "*"
+              Service:
+                - ecs-tasks.amazonaws.com
       Policies:
         - PolicyName: SqsFullApplicationAccess
           PolicyDocument:
