Fix SQS and SNS policies

--- a/stacks/feeder.prx.org.yml
+++ b/stacks/feeder.prx.org.yml
@@ -285,16 +285,16 @@ Resources:
                 Action:
                   - sqs:*
                 Resource:
-                  - "*_feeder_*"
+                  - !Sub arn:${AWS::Partition}:sqs:${AWS::Region}:${AWS::AccountId}:*_feeder_*
         - PolicyName: SnsFullApplicationAccess
           PolicyDocument:
             Version: "2012-10-17"
             Statement:
               - Effect: Allow
                 Action:
-                  - sqs:*
+                  - sns:*
                 Resource:
-                  - "*_announce_feed_*"
+                  - !Sub arn:${AWS::Partition}:sns:${AWS::Region}:${AWS::AccountId}:*_announce_feed_*
         - PolicyName: S3FeedBucketAccess
           PolicyDocument:
             Version: "2012-10-17"
