--- a/stacks/feeder.prx.org.yml
+++ b/stacks/feeder.prx.org.yml
@@ -324,7 +324,7 @@ Resources:
                   - s3:PutObjectVersionAcl
                   # - s3:RestoreObject
                 Resource:
-                  - prx-feed
+                  - arn:aws:s3:::prx-feed
       Tags:
         - Key: Project
           Value: !Ref AppName
