Grant more permissive S3 read access

--- a/stacks/feeder.prx.org.yml
+++ b/stacks/feeder.prx.org.yml
@@ -295,6 +295,14 @@ Resources:
                   - sns:*
                 Resource:
                   - !Sub arn:${AWS::Partition}:sns:${AWS::Region}:${AWS::AccountId}:*_announce_feed_*
+        - PolicyName: S3GenericObjectAccess
+          PolicyDocument:
+            Version: "2012-10-17"
+            Statement:
+              - Effect: Allow
+                Action:
+                  - s3:Get*
+                Resource: "*"
         - PolicyName: S3FeedBucketAccess
           PolicyDocument:
             Version: "2012-10-17"
