--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -617,6 +617,10 @@ Resources:
         CreateWorker: "true"
         DesiredWebsProduction: "6"
         DesiredWorkersProduction: "1"
+        SecretsInstanceDecryptPolicyArn:
+          Fn::ImportValue: !Sub ${SecretsStackName}-SecretsInstanceDecryptPolicyArn
+        SecretsInstanceAccessPolicyArn:
+          Fn::ImportValue: !Sub ${SecretsStackName}-SecretsInstanceAccessPolicyArn
         ContainerPort: "3000"
         ContainerMemory: !FindInMap [ECSReservationMap, !Ref EnvironmentType, BackendMemory]
         ContainerMemoryReservation: !FindInMap [ECSReservationMap, !Ref EnvironmentType, BackendMemoryReservation]
