Add additional Feeder SNS permissions

--- a/stacks/feeder.prx.org.yml
+++ b/stacks/feeder.prx.org.yml
@@ -302,6 +302,7 @@ Resources:
                   - sns:*
                 Resource:
                   - !Sub arn:${AWS::Partition}:sns:${AWS::Region}:${AWS::AccountId}:*_announce_feed_*
+                  - !Sub arn:${AWS::Partition}:sns:${AWS::Region}:${AWS::AccountId}:*_announce_story_*
         - PolicyName: S3FeedBucketAccess
           PolicyDocument:
             Version: "2012-10-17"
