Allow access staging bucket

--- a/stacks/feeder.prx.org.yml
+++ b/stacks/feeder.prx.org.yml
@@ -332,7 +332,10 @@ Resources:
                   - s3:PutObjectVersionAcl
                   # - s3:RestoreObject
                 Resource:
-                  - arn:aws:s3:::prx-feed
+                  - Fn::If:
+                      - CreateProductionResources
+                      - arn:aws:s3:::prx-feed
+                      - arn:aws:s3:::staging-prx-feed
       Tags:
         - Key: Project
           Value: !Ref AppName
