Add more permissive SNS publish policy

--- a/stacks/feeder.prx.org.yml
+++ b/stacks/feeder.prx.org.yml
@@ -303,6 +303,11 @@ Resources:
                 Resource:
                   - !Sub arn:${AWS::Partition}:sns:${AWS::Region}:${AWS::AccountId}:*_announce_feed_*
                   - !Sub arn:${AWS::Partition}:sns:${AWS::Region}:${AWS::AccountId}:*_announce_story_*
+              - Effect: Allow
+                Action:
+                  - sns:Publish
+                Resource:
+                  - "*"
         - PolicyName: S3FeedBucketAccess
           PolicyDocument:
             Version: "2012-10-17"
