Add safety quotes

--- a/stacks/feeder.prx.org.yml
+++ b/stacks/feeder.prx.org.yml
@@ -339,8 +339,8 @@ Resources:
                 Resource:
                   Fn::If:
                     - CreateProductionResources
-                    - [arn:aws:s3:::prx-feed/*, arn:aws:s3:::prx-feed]
-                    - [arn:aws:s3:::staging-prx-feed/*, arn:aws:s3:::staging-prx-feed]
+                    - ["arn:aws:s3:::prx-feed/*", "arn:aws:s3:::prx-feed"
+                    - ["arn:aws:s3:::staging-prx-feed/*", "arn:aws:s3:::staging-prx-feed"]
       Tags:
         - Key: Project
           Value: !Ref AppName
