--- a/stacks/feeder.prx.org.yml
+++ b/stacks/feeder.prx.org.yml
@@ -339,7 +339,7 @@ Resources:
                 Resource:
                   Fn::If:
                     - CreateProductionResources
-                    - ["arn:aws:s3:::prx-feed/*", "arn:aws:s3:::prx-feed"
+                    - ["arn:aws:s3:::prx-feed/*", "arn:aws:s3:::prx-feed"]
                     - ["arn:aws:s3:::staging-prx-feed/*", "arn:aws:s3:::staging-prx-feed"]
       Tags:
         - Key: Project
