Enable Feeder task role in prod

--- a/stacks/feeder.prx.org.yml
+++ b/stacks/feeder.prx.org.yml
@@ -400,10 +400,7 @@ Resources:
           Value: !Ref AWS::StackName
         - Key: prx:cloudformation:stack-id
           Value: !Ref AWS::StackId
-      TaskRoleArn: !If
-        - CreateProductionResources
-        - !Ref AWS::NoValue
-        - !GetAtt TaskRole.Arn
+      TaskRoleArn: !GetAtt TaskRole.Arn
   WebService:
     Type: AWS::ECS::Service
     DependsOn:
@@ -479,10 +476,7 @@ Resources:
           Value: !Ref AWS::StackName
         - Key: prx:cloudformation:stack-id
           Value: !Ref AWS::StackId
-      TaskRoleArn: !If
-        - CreateProductionResources
-        - !Ref AWS::NoValue
-        - !GetAtt TaskRole.Arn
+      TaskRoleArn: !GetAtt TaskRole.Arn
   WorkerService:
     Condition: CreateWorkerResources
     Type: AWS::ECS::Service
