Add aws-lambda types module

--- a/notifications/slack/package.json
+++ b/notifications/slack/package.json
@@ -9,6 +9,7 @@
   "devDependencies": {
     "@slack/events-api": "^2.3.4",
     "@slack/interactive-messages": "^1.7.0",
-    "@slack/web-api": "^5.14.0"
+    "@slack/web-api": "^5.14.0",
+    "@types/aws-lambda": "^8.10.0"
   }
 }
