Add missing stack parameter

--- a/notifications/slack/template.yml
+++ b/notifications/slack/template.yml
@@ -20,6 +20,8 @@ Parameters:
       The name of a role that exists in all member accounts of an AWS
       Organization, which has permissions for various DevOps operations, such
       as listing and executing pipelines.
+  OpsWarnMessagesSnsTopic:
+    Type: String
 Resources:
   HttpApi:
     Type: AWS::Serverless::HttpApi
