Fix template issues

--- a/notifications/slack/template.yml
+++ b/notifications/slack/template.yml
@@ -20,7 +20,7 @@ Parameters:
       The name of a role that exists in all member accounts of an AWS
       Organization, which has permissions for various DevOps operations, such
       as listing and executing pipelines.
-  OpsWarnMessagesSnsTopic:
+  OpsWarnMessagesSnsTopicArn:
     Type: String
 Resources:
   HttpApi:
@@ -129,7 +129,7 @@ Resources:
           OnFailure:
             Destination: !Ref RelayFunctionFailureSnsTopic
             Type: SNS
-        MaximumRetryAttempts: 5
+        MaximumRetryAttempts: 2
       Events:
         Relay:
           Properties:
@@ -160,12 +160,12 @@ Resources:
     Properties:
       ActionsEnabled: true
       AlarmName: "[DevOps][Slack Relay] Elevated error volume"
-      AlarmActions:
-        - !Ref OpsWarnMessagesSnsTopic
-      InsufficientDataActions:
-        - !Ref OpsWarnMessagesSnsTopic
-      OKActions:
-        - !Ref OpsWarnMessagesSnsTopic
+      # AlarmActions:
+      #   - !Ref OpsWarnMessagesSnsTopicArn
+      # InsufficientDataActions:
+      #   - !Ref OpsWarnMessagesSnsTopicArn
+      # OKActions:
+      #   - !Ref OpsWarnMessagesSnsTopicArn
       AlarmDescription: >-
         Slack relay function has encountered several invocation errors
       ComparisonOperator: GreaterThanOrEqualToThreshold
@@ -194,12 +194,12 @@ Resources:
     Properties:
       ActionsEnabled: true
       AlarmName: "[DevOps][Slack Relay] Experiencing failures"
-      AlarmActions:
-        - !Ref OpsWarnMessagesSnsTopic
-      InsufficientDataActions:
-        - !Ref OpsWarnMessagesSnsTopic
-      OKActions:
-        - !Ref OpsWarnMessagesSnsTopic
+      # AlarmActions:
+      #   - !Ref OpsWarnMessagesSnsTopicArn
+      # InsufficientDataActions:
+      #   - !Ref OpsWarnMessagesSnsTopicArn
+      # OKActions:
+      #   - !Ref OpsWarnMessagesSnsTopicArn
       AlarmDescription: >-
         Slack relay function has failed to send some messages, even after
         retrying several times
