--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,10 @@
 {
-  "extends": ["airbnb-base", "prettier"],
+  "extends": ["plugin:prettier/recommended"],
   "plugins": ["prettier"],
+  "env": {
+    "node": true,
+    "es2021": true
+  },
   "rules": {
     "prettier/prettier": ["error"],
     "no-console": 0,
