Fix alarm LoadBalancer dimension

--- a/stacks/dovetail.prx.org.yml
+++ b/stacks/dovetail.prx.org.yml
@@ -666,7 +666,7 @@ Resources:
       TreatMissingData: notBreaching
       Dimensions:
         - Name: LoadBalancer
-          Value: !Ref DovetailALB
+          Value: !GetAtt DovetailALB.LoadBalancerFullName
         - Name: TargetGroup
           Value: !GetAtt DovetailRouterALBTargetGroup.TargetGroupFullName
   # connect dovetail-router impressions to ddb kinesis
