Add CodePipeline PutApprovalResult policy to DevOps cross-account role

--- a/devops/aws-management/devops-cross-account-access-role.yml
+++ b/devops/aws-management/devops-cross-account-access-role.yml
@@ -67,6 +67,17 @@ Resources:
               - codepipeline:StartPipelineExecution
             Resource:
               - "*"
+  CodePipelineStartPipelineApprovalResultPolicy:
+    Type: AWS::IAM::ManagedPolicy
+    Properties:
+      PolicyDocument:
+        Version: "2012-10-17"
+        Statement:
+          - Effect: Allow
+            Action:
+              - codepipeline:PutApprovalResult
+            Resource:
+              - "*"
 
   CrossAccountAccessRole:
     Type: AWS::IAM::Role
@@ -90,6 +101,7 @@ Resources:
         - !Ref CloudFrontCreateInvalidationPolicy
         - !Ref CodePipelineListPipelinesPolicy
         - !Ref CodePipelineStartPipelineExecutionPolicy
+        - !Ref CodePipelineStartPipelineApprovalResultPolicy
       RoleName: !Sub ${CrossAccountAccessRoleName}
       Tags:
         - Key: Project
