--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "devDependencies": {
     "@octokit/rest": "^18.2.0",
+    "@slack/web-api": "^5.14.0",
     "@types/aws-lambda": "^8.10.63",
     "aws-sdk-mock": "^5.1.0",
     "dotenv": "^8.2.0",
