Add account ID to pipeline custom data

--- a/cd/cd.yml
+++ b/cd/cd.yml
@@ -704,7 +704,8 @@ Resources:
                 CustomData: !Sub |
                   {
                     "StackName": "${AWS::StackName}-root-production",
-                    "ChangeSetName": "${AWS::StackName}RootProductionChangeSet"
+                    "ChangeSetName": "${AWS::StackName}RootProductionChangeSet",
+                    "AccountId": "${AWS::AccountId}"
                   }
               RunOrder: 3
             - Name: ExecuteChangeSet
