--- a/stacks/dovetail.prx.org.yml
+++ b/stacks/dovetail.prx.org.yml
@@ -827,7 +827,7 @@ Resources:
   DovetailRouterScalingPolicy:
     Type: AWS::ApplicationAutoScaling::ScalingPolicy
     Properties:
-      PolicyName: ScaleIn
+      PolicyName: RequestCountScaling
       PolicyType: TargetTrackingScaling
       ScalingTargetId: !Ref DovetailRouterScalableTarget
       TargetTrackingScalingPolicyConfiguration:
