Move transistor DNS to CloudFront

--- a/dns/prx.org-hosted_zone.yml
+++ b/dns/prx.org-hosted_zone.yml
@@ -626,6 +626,16 @@ Resources:
           AliasTarget:
             DNSName: d1uuj4xcfminz6.cloudfront.net.
             HostedZoneId: Z2FDTNDATAQYW2
+        - Type: A
+          Name: !Sub transistor.${Domain}
+          AliasTarget:
+            DNSName: d3nn7rnvuqkyn9.cloudfront.net.
+            HostedZoneId: Z2FDTNDATAQYW2
+        - Type: AAAA
+          Name: !Sub transistor.${Domain}
+          AliasTarget:
+            DNSName: d3nn7rnvuqkyn9.cloudfront.net.
+            HostedZoneId: Z2FDTNDATAQYW2
   Prss:
     Type: "AWS::Route53::RecordSetGroup"
     Properties:
@@ -875,11 +885,6 @@ Resources:
           TTL: "300"
           Type: A
           Name: !Sub reveal.${Domain}
-        - ResourceRecords:
-            - "199.119.122.230"
-          TTL: "300"
-          Type: A
-          Name: !Sub transistor.${Domain}
         - ResourceRecords:
             - "199.119.122.230"
           TTL: "300"
