Add additional CodePipeline access policies

--- a/devops/aws-management/devops-cross-account-access-role.yml
+++ b/devops/aws-management/devops-cross-account-access-role.yml
@@ -78,6 +78,29 @@ Resources:
               - codepipeline:PutApprovalResult
             Resource:
               - "*"
+  CodePipelineTransitionChangePolicy:
+    Type: AWS::IAM::ManagedPolicy
+    Properties:
+      PolicyDocument:
+        Version: "2012-10-17"
+        Statement:
+          - Effect: Allow
+            Action:
+              - codepipeline:DisableStageTransition
+              - codepipeline:EnableStageTransition
+            Resource:
+              - "*"
+  CodePipelineReadPolicy:
+    Type: AWS::IAM::ManagedPolicy
+    Properties:
+      PolicyDocument:
+        Version: "2012-10-17"
+        Statement:
+          - Effect: Allow
+            Action:
+              - codepipeline:GetPipeline
+            Resource:
+              - "*"
 
   CrossAccountAccessRole:
     Type: AWS::IAM::Role
@@ -102,6 +125,8 @@ Resources:
         - !Ref CodePipelineListPipelinesPolicy
         - !Ref CodePipelineStartPipelineExecutionPolicy
         - !Ref CodePipelineStartPipelineApprovalResultPolicy
+        - !Ref CodePipelineTransitionChangePolicy
+        - !Ref CodePipelineReadPolicy
       RoleName: !Sub ${CrossAccountAccessRoleName}
       Tags:
         - Key: Project
