Add GetPipelineState policy

--- a/devops/aws-management/devops-cross-account-access-role.yml
+++ b/devops/aws-management/devops-cross-account-access-role.yml
@@ -99,6 +99,7 @@ Resources:
           - Effect: Allow
             Action:
               - codepipeline:GetPipeline
+              - codepipeline:GetPipelineState
             Resource:
               - "*"
 
