Use configurable user list

--- a/notifications/slack/template.yml
+++ b/notifications/slack/template.yml
@@ -22,6 +22,8 @@ Parameters:
       as listing and executing pipelines.
   OpsWarnMessagesSnsTopicArn:
     Type: String
+  DevOpsSlackUserIds:
+    Type: String
 Resources:
   HttpApi:
     Type: AWS::Serverless::HttpApi
@@ -84,6 +86,7 @@ Resources:
           AWS_NODEJS_CONNECTION_REUSE_ENABLED: "1"
           AWS_ORGANIZATION_CROSS_ACCOUNT_SHARING_ROLE_ARN: !Ref AwsOrganizationCrossAccountSharingRoleArn
           DEVOPS_CROSS_ACCOUNT_ACCESS_ROLE_NAME: !Ref DevOpsCrossAccountAccessRoleName
+          DEVOPS_SLACK_USER_IDS: !Ref DevOpsSlackUserIds
       Events:
         EventRequest:
           Properties:
