--- a/dns/prxu.org-hosted_zone.yml
+++ b/dns/prxu.org-hosted_zone.yml
@@ -1,28 +1,30 @@
 # dns/prxu.org-hosted_zone.yml
 AWSTemplateFormatVersion: "2010-09-09"
-Description: >
+Description: >-
   Hosted zone and record sets for prxu.org
+
 Parameters:
   Domain:
     Default: prxu.org.
     Description: The domain name and hosted zone
     Type: String
+
 Resources:
   HostedZone:
-    Type: "AWS::Route53::HostedZone"
+    Type: AWS::Route53::HostedZone
     Properties:
       HostedZoneConfig:
         Comment: User-generated Content
       HostedZoneTags:
-        - Key: "prx:cloudformation:stack-name"
+        - Key: prx:cloudformation:stack-name
           Value: !Ref AWS::StackName
-        - Key: "prx:cloudformation:stack-id"
+        - Key: prx:cloudformation:stack-id
           Value: !Ref AWS::StackId
-      #   - Key: Project
-      #     Value: radiotopia.fm
+        - Key: Project
+          Value: Dovetail
       Name: !Ref Domain
   Text:
-    Type: "AWS::Route53::RecordSetGroup"
+    Type: AWS::Route53::RecordSetGroup
     Properties:
       # Route53 expects TXT record values to be enclosed in double quotes, so in
       # the YAML they need to be double-quoted.
@@ -48,7 +50,7 @@ Resources:
           Type: TXT
           Name: !Sub dzc.${Domain}
   Dovetail:
-    Type: "AWS::Route53::RecordSetGroup"
+    Type: AWS::Route53::RecordSetGroup
     Properties:
       Comment: Dovetail
       HostedZoneId: !Ref HostedZone
@@ -63,16 +65,7 @@ Resources:
           AliasTarget:
             DNSName: dualstack.infra-dovet-1jujps3p3xej3-652325001.us-east-1.elb.amazonaws.com.
             HostedZoneId: Z35SXDOTRQ7X7K
-        - Type: A
-          Name: !Sub tal.dovetail.${Domain}
-          AliasTarget:
-            DNSName: dualstack.infra-dovet-1jujps3p3xej3-652325001.us-east-1.elb.amazonaws.com.
-            HostedZoneId: Z35SXDOTRQ7X7K
-        - Type: AAAA
-          Name: !Sub tal.dovetail.${Domain}
-          AliasTarget:
-            DNSName: dualstack.infra-dovet-1jujps3p3xej3-652325001.us-east-1.elb.amazonaws.com.
-            HostedZoneId: Z35SXDOTRQ7X7K
+
         - Type: A
           Name: !Sub dovetail-router.${Domain}
           AliasTarget:
@@ -83,6 +76,7 @@ Resources:
           AliasTarget:
             DNSName: dualstack.infra-dovet-1jujps3p3xej3-652325001.us-east-1.elb.amazonaws.com.
             HostedZoneId: Z35SXDOTRQ7X7K
+
         - Type: A
           Name: !Sub dovetail.staging.${Domain}
           AliasTarget:
@@ -93,6 +87,7 @@ Resources:
           AliasTarget:
             DNSName: dualstack.infra-dovet-1y2ncjszlrdmz-1988316390.us-east-1.elb.amazonaws.com.
             HostedZoneId: Z35SXDOTRQ7X7K
+
         - Type: A
           Name: !Sub dovetail-router.staging.${Domain}
           AliasTarget:
@@ -104,48 +99,27 @@ Resources:
             DNSName: dualstack.infra-dovet-1y2ncjszlrdmz-1988316390.us-east-1.elb.amazonaws.com.
             HostedZoneId: Z35SXDOTRQ7X7K
   Mx:
-    Type: "AWS::Route53::RecordSetGroup"
+    Type: AWS::Route53::RecordSetGroup
     Properties:
       Comment: MX Records
       HostedZoneId: !Ref HostedZone
       RecordSets:
         - ResourceRecords:
-            - "1 ASPMX.L.GOOGLE.COM."
-            - "5 ALT1.ASPMX.L.GOOGLE.COM."
-            - "5 ALT2.ASPMX.L.GOOGLE.COM."
-            - "10 ASPMX2.GOOGLEMAIL.COM."
-            - "10 ASPMX3.GOOGLEMAIL.COM."
+            - 1 ASPMX.L.GOOGLE.COM.
+            - 5 ALT1.ASPMX.L.GOOGLE.COM.
+            - 5 ALT2.ASPMX.L.GOOGLE.COM.
+            - 10 ASPMX2.GOOGLEMAIL.COM.
+            - 10 ASPMX3.GOOGLEMAIL.COM.
           TTL: "300"
           Type: MX
           Name: !Ref Domain
-        - ResourceRecords:
-            - "1 ASPMX.L.GOOGLE.COM."
-            - "5 ALT1.ASPMX.L.GOOGLE.COM."
-            - "5 ALT2.ASPMX.L.GOOGLE.COM."
-            - "10 ASPMX2.GOOGLEMAIL.COM."
-            - "10 ASPMX3.GOOGLEMAIL.COM."
-          TTL: "300"
-          Type: MX
-          Name: !Sub tal.dovetail.${Domain}
   CloudFront:
-    Type: "AWS::Route53::RecordSetGroup"
+    Type: AWS::Route53::RecordSetGroup
     Properties:
       Comment: CloudFront
       HostedZoneId: !Ref HostedZone
       RecordSets:
         - Type: A
-          Name: !Sub userupload.${Domain}
-          AliasTarget:
-            DNSName: dsn15m3yob5tf.cloudfront.net.
-            # Global CloudFront hosted zone ID
-            HostedZoneId: Z2FDTNDATAQYW2
-        - Type: AAAA
-          Name: !Sub userupload.${Domain}
-          AliasTarget:
-            DNSName: dsn15m3yob5tf.cloudfront.net.
-            # Global CloudFront hosted zone ID
-            HostedZoneId: Z2FDTNDATAQYW2
-        - Type: A
           Name: !Sub dovetail-cdn.${Domain}
           AliasTarget:
             DNSName: d1q81akgt84zc2.cloudfront.net
@@ -155,6 +129,7 @@ Resources:
           AliasTarget:
             DNSName: d1q81akgt84zc2.cloudfront.net
             HostedZoneId: Z2FDTNDATAQYW2
+
         - Type: A
           Name: !Sub dovetail-cdn-staging.${Domain}
           AliasTarget:
@@ -165,6 +140,7 @@ Resources:
           AliasTarget:
             DNSName: d3lbo76wcalex1.cloudfront.net
             HostedZoneId: Z2FDTNDATAQYW2
+
         - Type: A
           Name: !Sub ryan-cdn.${Domain}
           AliasTarget:
@@ -175,6 +151,7 @@ Resources:
           AliasTarget:
             DNSName: d3l72zpcrodhix.cloudfront.net
             HostedZoneId: Z2FDTNDATAQYW2
+
         - Type: A
           Name: !Sub f-staging.${Domain}
           AliasTarget:
@@ -185,6 +162,7 @@ Resources:
           AliasTarget:
             DNSName: d2pni491hnsr7.cloudfront.net
             HostedZoneId: Z2FDTNDATAQYW2
+
         - Type: A
           Name: !Sub f.${Domain}
           AliasTarget:
@@ -195,6 +173,7 @@ Resources:
           AliasTarget:
             DNSName: d32fszakr14ebp.cloudfront.net
             HostedZoneId: Z2FDTNDATAQYW2
+
         - Type: A
           Name: !Sub a.${Domain}
           AliasTarget:
@@ -205,34 +184,8 @@ Resources:
           AliasTarget:
             DNSName: dqos2vqrtnmab.cloudfront.net
             HostedZoneId: Z2FDTNDATAQYW2
-  Highwinds:
-    Type: "AWS::Route53::RecordSetGroup"
-    Properties:
-      Comment: Highwinds
-      HostedZoneId: !Ref HostedZone
-      RecordSets:
-        - ResourceRecords:
-            - cds.q5s4q5h8.hwcdn.net.
-          TTL: "300"
-          Type: CNAME
-          Name: !Sub cdn-ad-files.${Domain}
-        - ResourceRecords:
-            - dovetail-cdn-staging.prxu.org.
-          TTL: "86400"
-          Type: CNAME
-          Name: !Sub cdn-dovetail-staging.${Domain}
-        - ResourceRecords:
-            - dovetail-cdn.prxu.org.
-          TTL: "300"
-          Type: CNAME
-          Name: !Sub cdn-dovetail.${Domain}
-        - ResourceRecords:
-            - dovetail-cdn.prxu.org.
-          TTL: "86400"
-          Type: CNAME
-          Name: !Sub cdn.dovetail.${Domain}
   Aws:
-    Type: "AWS::Route53::RecordSetGroup"
+    Type: AWS::Route53::RecordSetGroup
     Properties:
       Comment: AWS ACM, etc
       HostedZoneId: !Ref HostedZone
@@ -272,11 +225,6 @@ Resources:
           TTL: "300"
           Type: CNAME
           Name: !Sub _c0a78e4dc0641158468774cfeec66f6e.dovetail-cdn-staging.${Domain}
-        - ResourceRecords:
-            - _db9d45e09be31a9a888e1a793969a911.ltfvzjuylp.acm-validations.aws.
-          TTL: "300"
-          Type: CNAME
-          Name: !Sub _ac77f64307346fc4ab79289150f00aba.userupload.${Domain}
         - ResourceRecords:
             - _9d5735ed912db035b64fcd06ee2cc188.tfmgdnztqk.acm-validations.aws.
           TTL: "300"
