Try limiting concurrency

--- a/stacks/container-apps/augury-forecast.yml
+++ b/stacks/container-apps/augury-forecast.yml
@@ -285,6 +285,7 @@ Resources:
           }
         };
       MemorySize: 128
+      ReservedConcurrentExecutions: 1
       Role: !GetAtt AuguryForecastRelayLambdaRole.Arn
       Runtime: nodejs12.x
       Tags:
