--- a/stacks/container-apps/augury-forecast.yml
+++ b/stacks/container-apps/augury-forecast.yml
@@ -91,7 +91,8 @@ Resources:
     Type: "AWS::ECS::TaskDefinition"
     Properties:
       ContainerDefinitions:
-        - Environment:
+        - Command: [forecast]
+          Environment:
             - Name: APP_NAME
               Value: augury
             - Name: APP_ENV
@@ -127,25 +128,27 @@ Resources:
         - Key: prx:cloudformation:stack-id
           Value: !Ref AWS::StackId
       TaskRoleArn: !GetAtt AuguryForecastTaskRole.Arn
-  # SNS relay for launching Fargate tasks
-  AuguryForecastRelaySnsTopic:
-    Type: "AWS::SNS::Topic"
-  AuguryForecastRelaySnsTopicPolicy:
-    Type: "AWS::SNS::TopicPolicy"
+  # SQS relay for launching Fargate tasks
+  AuguryForecastRelaySqsQueue:
+    Type: "AWS::SQS::Queue"
     Properties:
+      FifoQueue: true
+  AuguryForecastRelaySqsQueuePolicy:
+    Type: "AWS::SQS::QueuePolicy"
+    Properties:
+      Queues:
+        - !Ref AuguryForecastRelaySqsQueue
       PolicyDocument:
         Id: AuguryForecastRelayPolicy
         Version: "2012-10-17"
         Statement:
-          - Sid: ECSInstancePublish
+          - Sid: ECSInstanceSendMessage
             Effect: Allow
             Principal:
               AWS: !Ref ECSInstanceIAMRoleArn
             Action:
-              - sns:Publish
-            Resource: !Ref AuguryForecastRelaySnsTopic
-      Topics:
-        - !Ref AuguryForecastRelaySnsTopic
+              - sqs:SendMessage
+            Resource: !GetAtt AuguryForecastRelaySqsQueue.Arn
   AuguryForecastRelayLambdaRole:
     Type: "AWS::IAM::Role"
     Properties:
@@ -159,7 +162,7 @@ Resources:
             Action:
               - "sts:AssumeRole"
       ManagedPolicyArns:
-        - arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole
+        - arn:aws:iam::aws:policy/service-role/AWSLambdaSQSQueueExecutionRole
       Path: "/"
       Policies:
         - PolicyName: FargateLauncher
@@ -188,7 +191,7 @@ Resources:
   AuguryForecastRelayLambdaFunction:
     Type: AWS::Serverless::Function
     Properties:
-      Description: Launches fargate forecast executions from SNS
+      Description: Launches fargate forecast executions from SQS
       Environment:
         Variables:
           ECS_CLUSTER: !Ref ECSCluster
@@ -197,10 +200,11 @@ Resources:
           VPC_SUBNET_2: !Ref VPCSubnet2
           VPC_SUBNET_3: !Ref VPCSubnet3
       Events:
-        SnsMessages:
+        SqsMessages:
+          Type: SQS
           Properties:
-            Topic: !Ref AuguryForecastRelaySnsTopic
-          Type: SNS
+            BatchSize: 1
+            Queue: !GetAtt AuguryForecastRelaySqsQueue.Arn
       Handler: index.handler
       InlineCode: |
         const AWS = require('aws-sdk');
@@ -221,12 +225,6 @@ Resources:
         // ECS runTask parameters
         const runParams = {
           cluster: process.env.ECS_CLUSTER,
-          containerOverrides: [
-            {
-              name: 'augury-forecast',
-              command: 'forecast',
-            }
-          ],
           launchType: 'FARGATE',
           networkConfiguration: {
             awsvpcConfiguration: {
@@ -244,44 +242,18 @@ Resources:
           console[level](JSON.stringify({level, msg, ...extra}));
         }
 
-        // look for well formatted SNS forecast requests
-        function decode(record) {
-          if (record && record.Sns && record.Sns.Message) {
-            try {
-              const json = JSON.parse(record.Sns.Message);
-              if (json && json.forecast_id) {
-                return json;
-              }
-            } catch (err) {
-              return null;
-            }
-          }
-          return null;
-        }
-
         exports.handler = async (event) => {
-          const goodRecords = (event.Records || []).map(r => decode(r)).filter(r => r);
-          const badRecords = (event.Records || []).filter(r => !decode(r));
-
-          // check how many fargates are already running
           const listRes = await ecs.listTasks(listParams).promise();
-          const maxRunTasks = MAX_FARGATES - listRes.taskArns.length;
-          const numToRun = Math.min(goodRecords.length, maxRunTasks);
-
-          // launch new fargates to process the forecast queue
-          log('info', `launching ${numToRun} forecasts`);
-          for (let i = 0; i < numToRun; i++) {
+          const running = listRes.taskArns.length;
+          if (running < MAX_FARGATES) {
+            log('info', `launching ${numToRun} forecasts`);
             try {
-              const runRes = await ecs.runTask(params).promise();
+              const runRes = await ecs.runTask(runParams).promise();
               log('debug', 'ran task', runRes);
             } catch (err) {
               log('error', 'error running task', err);
               throw err;
             }
-          }
-          if (badRecords.length) {
-            log('error', 'bad input records', {badRecords});
-            throw new Error('Bad input records');
           }
         };
       MemorySize: 128
@@ -318,6 +290,6 @@ Resources:
         - Name: FunctionName
           Value: !Ref AuguryForecastRelayLambdaFunction
 Outputs:
-  SnsTopicArn:
-    Description: Arn for the worker task definition
-    Value: !Ref AuguryForecastRelaySnsTopic
+  SqsQueueUrl:
+    Description: Url for the forecast relay SQS queue
+    Value: !Ref AuguryForecastRelaySqsQueue
