There is no numToRun now

--- a/stacks/container-apps/augury-forecast.yml
+++ b/stacks/container-apps/augury-forecast.yml
@@ -246,7 +246,7 @@ Resources:
           const listRes = await ecs.listTasks(listParams).promise();
           const running = listRes.taskArns.length;
           if (running < MAX_FARGATES) {
-            log('info', `launching ${numToRun} forecasts`);
+            log('info', 'launching 1 fargate forecast worker');
             try {
               const runRes = await ecs.runTask(runParams).promise();
               log('debug', 'ran task', runRes);
