Also need list-tasks

--- a/stacks/container-apps/augury-forecast.yml
+++ b/stacks/container-apps/augury-forecast.yml
@@ -168,6 +168,10 @@ Resources:
             Version: "2012-10-17"
             Statement:
               - Effect: "Allow"
+                Resource: "*"
+                Action:
+                  - ecs:ListTasks
+              - Effect: "Allow"
                 Resource: !Ref AuguryForecastTaskDefinition
                 Action:
                   - ecs:RunTask
