Use metric filters on forecast runs

--- a/stacks/container-apps/augury-forecast.yml
+++ b/stacks/container-apps/augury-forecast.yml
@@ -293,6 +293,9 @@ Resources:
         - Name: FunctionName
           Value: !Ref AuguryForecastRelayLambdaFunction
 Outputs:
+  LogGroupName:
+    Description: Name of the forecast log group
+    Value: !Ref AuguryForecastLogGroup
   SqsQueueUrl:
     Description: Url for the forecast relay SQS queue
     Value: !Ref AuguryForecastRelaySqsQueue
