--- a/stacks/container-apps/root.yml
+++ b/stacks/container-apps/root.yml
@@ -363,6 +363,7 @@ Resources:
         EnvironmentType: !Ref EnvironmentType
         EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
         AuguryWorkerLogGroupName: !GetAtt AuguryStack.Outputs.WorkerLogGroupName
+        AuguryForecastLogGroupName: !GetAtt AuguryForecastStack.Outputs.LogGroupName
       Tags:
         - Key: "prx:cloudformation:stack-name"
           Value: !Ref AWS::StackName
