Fix deploy diff link

--- a/devops/aws-management/cd/template.yml
+++ b/devops/aws-management/cd/template.yml
@@ -1,6 +1,6 @@
 AWSTemplateFormatVersion: "2010-09-09"
 Transform: AWS::Serverless-2016-10-31
-Description: >
+Description: >-
   Creates a CodePipeline for use in the management account of an AWS
   Organization to create and maintain a set of resources used for security,
   compliance, permissions, etc.
