Use CMS-specific template

--- a/stacks/container-apps/root.yml
+++ b/stacks/container-apps/root.yml
@@ -478,7 +478,7 @@ Resources:
           Value: !Ref AWS::StackName
         - Key: "prx:cloudformation:stack-id"
           Value: !Ref AWS::StackId
-      TemplateURL: !Join ["", [!Ref TemplateUrlPrefix, "web-application.yml"]]
+      TemplateURL: !Join ["", [!Ref TemplateUrlPrefix, "cms.prx.org.yml"]]
       TimeoutInMinutes: 5
   CmsAlarmsStack:
     Type: "AWS::CloudFormation::Stack"
