--- a/stacks/container-apps/root.yml
+++ b/stacks/container-apps/root.yml
@@ -447,6 +447,9 @@ Resources:
         - Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic"
       Parameters:
         VPC: !Ref VPC
+        VPCSubnet1: !Ref VPCSubnet1
+        VPCSubnet2: !Ref VPCSubnet2
+        VPCSubnet3: !Ref VPCSubnet3
         PlatformALBDNSName: !Ref PlatformALBDNSName
         PlatformALBFullName: !Ref PlatformALBFullName
         PlatformALBCanonicalHostedZoneID: !Ref PlatformALBCanonicalHostedZoneID
